# IoT

./: .gitignore  README.md
NodeMcuV3/: .gitignore  CMakeLists.template.txt  CMakeLists.txt  DRAFT.md  README.md  WIKI.md  autocomplete.sh  config.sh  run.sh  setup.sh
NodeMcuV3/bashduino/: README.md  TODO.md  dependencies.sh
NodeMcuV3/bashduino/src/main/commands/: clion.sh  compile.sh  create_snapshot_arduino_ide_config.sh  help.sh  ide.sh  install_dependencies.sh  install_packages.sh  monitor.sh  shell.sh  shortlist.sh  test.sh  upload.sh
NodeMcuV3/bashduino/src/main/core/: autocomplete.sh  common.sh  import_eval.sh  shell_initializer.sh  variables_initializer.sh
NodeMcuV3/bashduino/src/main/lib/: common.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/cache/: get_cache_file.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/dependencies/: check_required_dependencies.sh  is_dependency_installed.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/ide/: configure_ide.sh  configure_port.sh  prepare_ide.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/indexes/: check_required_indexes.sh  get_required_indexes.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/libraries/: get_src_libraries.sh  get_src_library_files.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/preferences/: apply_preferences.sh  get_preferences.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/sketches/: get_sketch_file.sh  get_sketches.sh
NodeMcuV3/bashduino/src/main/lib/bashduino/snapshots/: check_required_snapshots.sh  get_hardware_dir.sh  get_snapshot_dirs.sh
NodeMcuV3/bashduino/src/main/resources/: CMakeLists.template.txt
NodeMcuV3/config/: config.dist.sh.template  config.sh  preferences.txt
NodeMcuV3/lib/: common.sh
NodeMcuV3/scripts/: create_snapshot_arduino_ide_config.sh  shortlist.sh
NodeMcuV3/src/BlinkLedOnRequest/: BlinkLedOnRequest.ino
NodeMcuV3/src/CaptivePortal/: CaptivePortal.ino  memory_usage.txt
NodeMcuV3/src/libraries/CaptivePortal/: library.properties
NodeMcuV3/src/libraries/CaptivePortal/src/: CaptivePortal.cpp  CaptivePortal.h  Resources.h
NodeMcuV3/src/libraries/CaptivePortal/src_backup/: CaptivePortal.h  Resources.h
NodeMcuV3/src/sketches/BlinkBuiltinLed/: BlinkBuiltinLed.ino
NodeMcuV3/src/sketches/BlinkLedOnRequest/: BlinkLedOnRequest.ino
NodeMcuV3/src/sketches/CaptivePortal/: CaptivePortal.ino  memory_usage.txt
utils/WebServerTester/: .gitignore  build.gradle  settings.gradle
utils/WebServerTester/src/main/java/pl/mfalkowski/NodeMCUtests/: NodeMcuTestsApplication.java
utils/WebServerTester/src/main/resources/: application.yml
utils/WebServerTester/src/main/resources/templates/: connecting.html  connecting.mustache  dupa.html  fetch_status_js.mustache  footer.mustache  header.mustache  root.html  root.mustache
utils/WebServerTester/src/main/resources/templates/admin/: admin.mustache
utils/WebServerTester/src/main/resources/templates/admin/blocks/: lastWifiStatusOptions.mustache  templatesOptions.mustache  wifiStatusOptions.mustache
utils/WebServerTester/src/test/java/pl/mfalkowski/NodeMCUtests/: NodeMcuTestsApplicationTests.java
